# devopstools

./: README.md
about-airflow/: Dockerfile  airflow.md
about-ansible/: about-ansible.md
about-asdf/: asdf.md
about-breakingllms/: cityscape.html  freecad.py  freecadhouse.py  freecadtrex.py  rampage.html
about-buildkit/: buildkit.md
about-celery/: airflow-flower.md  celery.md
about-cherrypy/: Dockerfile  cherrypy.md  docker-compose.yaml
about-ci/: continuousintegration.md
about-cobra/: cobra.md  viper.md
about-cryptography/: about-cryptography.md  decode.sh  encode.sh
about-daemons/: daemons.md
about-dasel/: dasel.md
about-debian/: debian.md  debiantools.md
about-deployments/: deployments.md
about-direnv/: direnv.md
about-dns/: dns.md  ingress.md
about-docker/: bindmounts.md  docker-bindmounts.md  docker-dev-mode-container.md  docker-volumes.md  docker.md  dockercommands.md  dockerfiles.md  dockermultistage.md  helpfuldockertips.md
about-entrypoint/: entrypoint.md
about-environments/: environments.md
about-feast/: Dockerfile  docker-compose.yaml  feast.md  feastbuildandtag.sh
about-fluentbit/: Dockerfile  fluent-bit.conf  fluentbit.md  parsers.conf
about-git/: git-tags.md  git.md  git_badillegalformat.md
about-gitlab/: gitlab-pipelines.md  gitlab-webhooks.md  gitlab.md
about-go/: Dockerfile  go.md  gocobra.md  gotemplates.md  (+4 more)
about-pythonpackage/pythonpackage-containerized-version/volumebindmount/app/: README.md  pyproject.toml
about-pythonpackage/pythonpackage-containerized-version/volumebindmount/app/src/addone/: addone.py
(+475 files in other folders)
